# matplotlib-pyodide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
matplotlib_pyodide/: __init__.py  browser_backend.py  html5_canvas_backend.py  wasm_backend.py
tests/: conftest.py  test_html5_canvas_backend.py  test_matplotlib.py
