[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]

build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
  "pytest-pyodide==0.23.1",
  "pytest-cov"
]

# Evable versioning via setuptools_scm
[tool.setuptools_scm]

[tool.pycln]
all = true

[tool.isort]
profile = "black"
known_first_party = [
  "pyodide",
  "pyodide_js",
  "micropip",
]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unreachable = true
ignore_missing_imports = true
