[metadata]
name = matplotlib-pyodide
author = Pyodide developers
description = ""HTML5 backends for Matplotlib compatible with Pyodide 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/matplotlib-pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/matplotlib-pyodide
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent


[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.10
